Added MailChimp code for testing.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Callan Wassenaar - Independent Candidate</title>
     <link rel="stylesheet" href="/style/style.css">
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/8227993a9bfb19ada3ef7ced8/d9da51cac311bfbf3e630145d.js");</script>
 </head>
 
 <style>
