Added 'Designed and Developed by Tyler Wolfe' on the footer.

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
         <div class="container">
             <div class="footer-content">
                 <div>
-                    <p>&copy; 2024 Callan Wassenaar - Grassroots Campaign. People powered.</p>
+                    <p>&copy; 2024 Callan Wassenaar - Grassroots Campaign. People powered. Designed and developed by <a href="https://www.tylerwolfe.dev" style="color: hsl(257, 62%, 71%); text-decoration: none; cursor: pointer;">Tyler Wolfe</a></p>
                 </div>
                 <div class="social-links">
                     <a href="https://www.facebook.com/profile.php?id=61577880792450" class="social-link" aria-label="Twitter"><img src="/media/logo/facebook.png" alt="facebook"></a>
