Moved the location of the 'Designed and Developed by Tyler Wolfe' on the footer. Made it at the bottom and centred

--- a/index.html
+++ b/index.html
@@ -498,13 +498,16 @@
         <div class="container">
             <div class="footer-content">
                 <div>
-                    <p>&copy; 2024 Callan Wassenaar - Grassroots Campaign. People powered. Designed and developed by <a href="https://www.tylerwolfe.dev" style="color: hsl(257, 62%, 71%); text-decoration: none; cursor: pointer;">Tyler Wolfe</a></p>
+                    <p>&copy; 2024 Callan Wassenaar - Grassroots Campaign. People powered.</p>
                 </div>
                 <div class="social-links">
                     <a href="https://www.facebook.com/profile.php?id=61577880792450" class="social-link" aria-label="Twitter"><img src="/media/logo/facebook.png" alt="facebook"></a>
                     <a href="https://www.reddit.com/user/Callan_For_Change/" class="social-link" aria-label="Reddit"><img src="/media/logo/reddit.png" alt="reddit"></a>
                     <a href="https://www.tiktok.com/@callanforchange?referer_url=localhost%3A5500%2F%23&refer=creator_embed&embed_source=121374463%2C121468991%2C121439635%2C121749182%2C121433650%2C121404359%2C121497414%2C121477481%2C121351166%2C121772353%2C121487028%2C121331973%2C120811592%2C120810756%2C121819198%3Bnull%3Bembed_creator_card" class="social-link" aria-label="TikTok"><img src="/media/logo/tik-tok.png" alt="reddit"></a>
                 </div>
+            </div>
+            <div>
+                <p>Designed and developed by <a href="https://www.tylerwolfe.dev" style="color: hsl(257, 62%, 71%); text-decoration: none; cursor: pointer;">Tyler Wolfe</a></p>
             </div>
         </div>
     </footer>
