Added Election Day event to the calendar.

--- a/index.html
+++ b/index.html
@@ -133,84 +133,19 @@
                 </div>
             </section>
 
-            <!-- <section class="content-section">
+            <section class="content-section">
                 <h2 class="section-title">What's Happening</h2>
                 <div class="events-container">
                     <div class="event-card upcoming">
                         <div class="event-date">
-                            <span class="month">Jul</span>
-                            <span class="day">25</span>
-                        </div>
-                        <div class="event-details">
-                            <h3>Coffee & Chat</h3>
-                            <p class="event-info">📍 Maya's Coffee Shop • 7:00 PM</p>
-                            <p class="event-desc">Weekly drop-in chat about what matters to you. Come as you are!</p>
-                            <span class="event-tag">Weekly</span>
-                        </div>
-                    </div>
-
-                    <div class="event-card">
-                        <div class="event-date">
-                            <span class="month">Jul</span>
-                            <span class="day">27</span>
-                        </div>
-                        <div class="event-details">
-                            <h3>Healthcare Town Hall</h3>
-                            <p class="event-info">📍 Community Center • 2:00 PM</p>
-                            <p class="event-desc">Let's talk about keeping our hospital open and making prescriptions affordable.</p>
-                            <span class="event-tag">Town Hall</span>
-                        </div>
-                    </div>
-
-                    <div class="event-card">
-                        <div class="event-date">
                             <span class="month">Aug</span>
-                            <span class="day">03</span>
+                            <span class="day">18</span>
                         </div>
                         <div class="event-details">
-                            <h3>Block Party Canvass</h3>
-                            <p class="event-info">📍 Elm Street Park • 11:00 AM</p>
-                            <p class="event-desc">BBQ, music, and conversations with neighbors. Bring the whole family!</p>
-                            <span class="event-tag">Community</span>
-                        </div>
-                    </div>
-
-                    <div class="event-card">
-                        <div class="event-date">
-                            <span class="month">Aug</span>
-                            <span class="day">08</span>
-                        </div>
-                        <div class="event-details">
-                            <h3>Jobs & Economy Forum</h3>
-                            <p class="event-info">📍 Union Hall • 6:30 PM</p>
-                            <p class="event-desc">Small business owners, union leaders, and workers talking solutions.</p>
-                            <span class="event-tag">Forum</span>
-                        </div>
-                    </div>
-
-                    <div class="event-card">
-                        <div class="event-date">
-                            <span class="month">Aug</span>
-                            <span class="day">15</span>
-                        </div>
-                        <div class="event-details">
-                            <h3>Volunteer Phone Bank</h3>
-                            <p class="event-info">📍 Campaign HQ • 5:00 PM</p>
-                            <p class="event-desc">Help us reach voters! Pizza and phone training provided.</p>
-                            <span class="event-tag">Volunteer</span>
-                        </div>
-                    </div>
-
-                    <div class="event-card">
-                        <div class="event-date">
-                            <span class="month">Aug</span>
-                            <span class="day">22</span>
-                        </div>
-                        <div class="event-details">
-                            <h3>Environment & Agriculture Meet-up</h3>
-                            <p class="event-info">📍 Johnson Farm • 4:00 PM</p>
-                            <p class="event-desc">Farmers and environmentalists finding common ground on climate solutions.</p>
-                            <span class="event-tag">Meet-up</span>
+                            <h3>Election Day!</h3>
+                            <p class="event-info">📍 Battle River Crowfoot Polling Stations • 9:00 AM - 9:00 PM</p>
+                            <p class="event-desc">Come and vote for the right people</p>
+                            <span class="event-tag">Election Day</span>
                         </div>
                     </div>
                 </div>
@@ -218,7 +153,7 @@
                 <div class="events-cta">
                     <p>Want to host an event in your neighborhood? <a href="#" onclick="showPage('contact')" class="inline-link">Let's make it happen!</a></p>
                 </div>
-            </section> -->
+            </section>
 
             <section class="content-section">
                 <h2 class="section-title">See What We're Up To</h2>
