Added 3 events as per Callan's request

--- a/index.html
+++ b/index.html
@@ -139,12 +139,46 @@
                     <div class="event-card upcoming">
                         <div class="event-date">
                             <span class="month">Aug</span>
+                            <span class="day">15</span>
+                        </div>
+                        <div class="event-details">
+                            <h3>Information Session</h3>
+                            <p class="event-info">📍 Live • 6:00 AM - 8:00 PM</p>
+                            <p class="event-desc">Come and ask me questions!</p>
+                            <span class="event-tag">Live event</span>
+                        </div>
+                    </div><div class="event-card">
+                        <div class="event-date">
+                            <span class="month">Aug</span>
+                            <span class="day">16</span>
+                        </div>
+                        <div class="event-details">
+                            <h3>Information Session 2</h3>
+                            <p class="event-info">📍 Live • 6:00 AM - 8:00 PM</p>
+                            <p class="event-desc">Come and ask me questions!</p>
+                            <span class="event-tag">Live event</span>
+                        </div>
+                    </div><div class="event-card">
+                        <div class="event-date">
+                            <span class="month">Aug</span>
+                            <span class="day">17</span>
+                        </div>
+                        <div class="event-details">
+                            <h3>Information Session 3</h3>
+                            <p class="event-info">📍 Live • 6:00 AM - 8:00 PM</p>
+                            <p class="event-desc">Come and ask me questions!</p>
+                            <span class="event-tag">Live event</span>
+                        </div>
+                    </div>
+                    <div class="event-card">
+                        <div class="event-date">
+                            <span class="month">Aug</span>
                             <span class="day">18</span>
                         </div>
                         <div class="event-details">
                             <h3>Election Day!</h3>
                             <p class="event-info">📍 Battle River Crowfoot Polling Stations • 9:00 AM - 9:00 PM</p>
-                            <p class="event-desc">Come and vote for the right people</p>
+                            <p class="event-desc">Come and vote for real change!</p>
                             <span class="event-tag">Election Day</span>
                         </div>
                     </div>
