--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </div>
                         <div class="event-details">
                             <h3>Information Session</h3>
-                            <p class="event-info">📍 Live • 6:00 AM - 8:00 PM</p>
+                            <p class="event-info">📍 Live • 6:00 PM - 8:00 PM</p>
                             <p class="event-desc">Come and ask me questions!</p>
                             <span class="event-tag">Live event</span>
                         </div>
@@ -154,7 +154,7 @@
                         </div>
                         <div class="event-details">
                             <h3>Information Session 2</h3>
-                            <p class="event-info">📍 Live • 6:00 AM - 8:00 PM</p>
+                            <p class="event-info">📍 Live • 6:00 PM - 8:00 PM</p>
                             <p class="event-desc">Come and ask me questions!</p>
                             <span class="event-tag">Live event</span>
                         </div>
@@ -165,7 +165,7 @@
                         </div>
                         <div class="event-details">
                             <h3>Information Session 3</h3>
-                            <p class="event-info">📍 Live • 6:00 AM - 8:00 PM</p>
+                            <p class="event-info">📍 Live • 6:00 PM - 8:00 PM</p>
                             <p class="event-desc">Come and ask me questions!</p>
                             <span class="event-tag">Live event</span>
                         </div>
