Added link to the location of Callan's live event.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </div>
                         <div class="event-details">
                             <h3>Information Session</h3>
-                            <p class="event-info">📍 Live • 6:00 PM - 8:00 PM</p>
+                            <p class="event-info">📍 Live on <a href="https://www.tiktok.com/@callanforchange?referer_url=localhost%3A5500%2F%23&refer=creator_embed&embed_source=121374463%2C121468991%2C121439635%2C121749182%2C121433650%2C121404359%2C121497414%2C121477481%2C121351166%2C121772353%2C121487028%2C121331973%2C120811592%2C120810756%2C121819198%3Bnull%3Bembed_creator_card">TikTok</a> • 6:00 PM - 8:00 PM</p>
                             <p class="event-desc">Come and ask me questions!</p>
                             <span class="event-tag">Live event</span>
                         </div>
@@ -154,7 +154,7 @@
                         </div>
                         <div class="event-details">
                             <h3>Information Session 2</h3>
-                            <p class="event-info">📍 Live • 6:00 PM - 8:00 PM</p>
+                            <p class="event-info">📍 Live on <a href="https://www.tiktok.com/@callanforchange?referer_url=localhost%3A5500%2F%23&refer=creator_embed&embed_source=121374463%2C121468991%2C121439635%2C121749182%2C121433650%2C121404359%2C121497414%2C121477481%2C121351166%2C121772353%2C121487028%2C121331973%2C120811592%2C120810756%2C121819198%3Bnull%3Bembed_creator_card">TikTok</a> • 6:00 PM - 8:00 PM</p>
                             <p class="event-desc">Come and ask me questions!</p>
                             <span class="event-tag">Live event</span>
                         </div>
@@ -165,7 +165,7 @@
                         </div>
                         <div class="event-details">
                             <h3>Information Session 3</h3>
-                            <p class="event-info">📍 Live • 6:00 PM - 8:00 PM</p>
+                            <p class="event-info">📍 Live on <a href="https://www.tiktok.com/@callanforchange?referer_url=localhost%3A5500%2F%23&refer=creator_embed&embed_source=121374463%2C121468991%2C121439635%2C121749182%2C121433650%2C121404359%2C121497414%2C121477481%2C121351166%2C121772353%2C121487028%2C121331973%2C120811592%2C120810756%2C121819198%3Bnull%3Bembed_creator_card">TikTok</a> • 6:00 PM - 8:00 PM</p>
                             <p class="event-desc">Come and ask me questions!</p>
                             <span class="event-tag">Live event</span>
                         </div>
