Fixed spacing on the event section card.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <section class="content-section">
                 <h2 class="section-title">What's Happening</h2>
                 <div class="events-container">
-                    </div><div class="event-card upcoming">
+                    <div class="event-card upcoming">
                         <div class="event-date">
                             <span class="month">Aug</span>
                             <span class="day">16</span>
@@ -147,7 +147,8 @@
                             <p class="event-desc">Come and ask me questions!</p>
                             <span class="event-tag">Live event</span>
                         </div>
-                    </div><div class="event-card">
+                    </div>
+                    <div class="event-card">
                         <div class="event-date">
                             <span class="month">Aug</span>
                             <span class="day">17</span>
