Removed the election day event for Aug 18th and left a message for people about possible future events.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
             <section class="content-section">
                 <h2 class="section-title">What's Happening</h2>
                 <div class="events-container">
-                    <div class="event-card upcoming">
+                    <h3 class="no-event-message">Keep checking in for upcoming events</h3>
+                    
+                    <!-- <div class="event-card upcoming">
                         <div class="event-date">
                             <span class="month">Aug</span>
                             <span class="day">18</span>
@@ -147,7 +149,7 @@
                             <p class="event-desc">Come and vote for real change!</p>
                             <span class="event-tag">Election Day</span>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 
                 <div class="events-cta">
