Removed information that Callan is running for the Battle River - Crowfoot election. Leave blank until further notice.

--- a/index.html
+++ b/index.html
@@ -136,18 +136,18 @@
             <section class="content-section">
                 <h2 class="section-title">What's Happening</h2>
                 <div class="events-container">
-                    <div class="event-card upcoming">
-                        <div class="event-date">
+                    <div class="event-card">
+                        <!-- <div class="event-date">
                             <span class="month">Aug</span>
                             <span class="day">18</span>
-                        </div> -->
+                        </div>  -->
                         <div class="event-details">
                             <h3>Keep checking in for upcoming events</h3>
                             <!-- <p class="event-info">📍 Battle River Crowfoot Polling Stations • 9:00 AM - 9:00 PM</p>
                             <p class="event-desc">Come and vote for real change!</p> -->
                             <!-- <span class="event-tag">Election Day</span> -->
                         </div>
-                    </div> -->
+                    </div>
                 </div>
                 
                 <div class="events-cta">
